--- a/index.html
+++ b/index.html
@@ -1,11 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF- 8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
-    <script src="./script.js"></script>
+    <label>Key</label>
+    <input id="keyInput" type="text">
+    <label>Value</label>
+    <input id="valueInput" type="text">
+    <button id="saveButton">Kaydet</button>
+    <ul id="keyValues">  
+    </ul>
+
+    <script src="cookie.js"></script>
 </body>
+
 </html>
